force-app/main/default/objects/PricingTable__c/PricingTable__c.object-meta.xml
<CustomObject>
    <label>価格表</label>
    <nameField>
        <displayFormat>K-{00000000}</displayFormat>
        <label>価格表番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>