force-app/main/default/objects/PricingTable__c/fields/BasePrice__c.field-meta.xml
<CustomField>
    <fullName>BasePrice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ベース価格</label>
    <referenceTo>PricingTable__c</referenceTo>
    <relationshipLabel>価格表</relationshipLabel>
    <relationshipName>PriceBooks</relationshipName>
    <type>Lookup</type>
</CustomField>