force-app/main/default/objects/PricingTable__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>S：施設、M：水環境、K：官需</description>
    <inlineHelpText>S：施設、M：水環境、K：官需</inlineHelpText>
    <label>BU</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BU</valueSetName>
    </valueSet>
</CustomField>