force-app/main/default/objects/PricingTable__c/fields/CapacityNumber__c.field-meta.xml
<CustomField>
    <fullName>CapacityNumber__c</fullName>
    <formula>IF(CONTAINS(Name6__c , &quot;kVA&quot;) , 
     VALUE(SUBSTITUTE(SUBSTITUTE(Name6__c , &quot;kVA&quot;, &quot;&quot;) , &quot;,&quot;, &quot;&quot;))
    , null
)</formula>
    <label>容量(数値)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>