force-app/main/default/objects/PricingTable__c/fields/CategoryName__c.field-meta.xml
<CustomField>
    <fullName>CategoryName__c</fullName>
    <label>種類名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>