force-app/main/default/objects/PricingTable__c/fields/CharacterSymbol__c.field-meta.xml
<CustomField>
    <fullName>CharacterSymbol__c</fullName>
    <label>文字記号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>