force-app/main/default/objects/PricingTable__c/fields/ConditionForSearchformula__c.field-meta.xml
<CustomField>
    <fullName>ConditionForSearchformula__c</fullName>
    <formula>IF (CONTAINS(Name1__c, &apos;特高TR&apos;) ,
IF (CONTAINS(Name1__c, &apos;特高TR 油入&apos;),&apos;1&apos;,  IF (CONTAINS(Name1__c, &apos;特高TR ﾓｰﾙﾄﾞ&apos;),&apos;2&apos;,IF (CONTAINS(Name1__c, &apos;特高TRｶﾞｽ&apos;),&apos;3&apos;, &apos;0&apos;)))
&amp;
IF (CONTAINS(Name1__c, &apos;屋内&apos;),&apos;1&apos;,  IF (CONTAINS(Name1__c, &apos;屋外&apos;),&apos;2&apos;,&apos;0&apos;))
&amp;
IF (CONTAINS(Name1__c, &apos;ｽﾎﾟｯﾄ&apos;) , &apos;1&apos; , &apos;0&apos;)
&amp;
IF (CONTAINS(Name1__c, &apos;二次低圧&apos;),&apos;1&apos;, &apos;0&apos;)
&amp;
IF (CONTAINS(Name1__c, &apos;13.8kV&apos;),IF (CONTAINS(Name4__c, &apos;66000&apos;),&apos;1&apos;, &apos;2&apos;), &apos;0&apos;)
&amp;
IF (OR(CONTAINS(Name1__c, &apos;収納盤&apos;),CONTAINS(Name1__c, &apos;GIS直結&apos;)),&apos;1&apos;, &apos;0&apos;)
, &apos;&apos;)</formula>
    <label>仕様条件（特高TR）</label>
    <type>Text</type>
</CustomField>