force-app/main/default/objects/PricingTable__c/fields/detailedStatementText__c.field-meta.xml
<CustomField>
    <fullName>detailedStatementText__c</fullName>
    <label>内訳書出力用テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>