force-app/main/default/objects/PricingTable__c/fields/DetailRecordDisplayNumber__c.field-meta.xml
<CustomField>
    <fullName>DetailRecordDisplayNumber__c</fullName>
    <formula>IF ( ISPICKVAL(BU__c, &apos;M&apos;) , &apos;1&apos;
 , IF (ISPICKVAL(BU__c, &apos;S&apos;), &apos;2&apos;, &apos;3&apos;) ) &amp; 
  MajorClassificationCode__c  &amp; 
   MinorClassificationCode__c  &amp; 
   IF ( RecordType.DeveloperName =&apos;Chassis&apos;, &apos;0&apos;, &apos;1&apos;)  &amp; 
    RIGHT( CategoryCode__c , 1)  &amp; 
       LPAD( TEXT( SpecialSpecificationNo__c ) , 2, &apos;0&apos;)   &amp; 
        LPAD( TEXT( RECNo__c ) , 5, &apos;0&apos;)</formula>
    <label>明細レコード表示順(数式)</label>
    <type>Text</type>
</CustomField>