force-app/main/default/objects/PricingTable__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <label>表示用テキスト</label>
    <length>100</length>
    <type>Text</type>
</CustomField>