force-app/main/default/objects/PricingTable__c/fields/EquipmentNumber__c.field-meta.xml
<CustomField>
    <fullName>EquipmentNumber__c</fullName>
    <label>器具番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>