force-app/main/default/objects/PricingTable__c/fields/IsSpecialCalculation__c.field-meta.xml
<CustomField>
    <fullName>IsSpecialCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true:ベース価格</description>
    <label>特殊計算あり</label>
    <type>Checkbox</type>
</CustomField>