force-app/main/default/objects/PricingTable__c/fields/MasterCode__c.field-meta.xml
<CustomField>
    <fullName>MasterCode__c</fullName>
    <externalId>true</externalId>
    <label>マスタコード</label>
    <length>15</length>
    <type>Text</type>
</CustomField>