force-app/main/default/objects/PricingTable__c/fields/Name1__c.field-meta.xml
<CustomField>
    <fullName>Name1__c</fullName>
    <label>名称1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>