force-app/main/default/objects/PricingTable__c/fields/Name3__c.field-meta.xml
<CustomField>
    <fullName>Name3__c</fullName>
    <label>名称3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>