force-app/main/default/objects/PricingTable__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>単価</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>