force-app/main/default/objects/PricingTable__c/fields/ProvisionPrice__c.field-meta.xml
<CustomField>
    <fullName>ProvisionPrice__c</fullName>
    <label>代理店提供価格</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>