force-app/main/default/objects/PricingTable__c/fields/RECNo__c.field-meta.xml
<CustomField>
    <fullName>RECNo__c</fullName>
    <label>RECNo</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>