force-app/main/default/objects/PricingTable__c/fields/RECNOforACBBoard__c.field-meta.xml
<CustomField>
    <fullName>RECNOforACBBoard__c</fullName>
    <label>ACB盤RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>