force-app/main/default/objects/PricingTable__c/fields/RECNOforACBBoardB_Attachment__c.field-meta.xml
<CustomField>
    <fullName>RECNOforACBBoardB_Attachment__c</fullName>
    <label>ACB盤B画面用RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>