force-app/main/default/objects/PricingTable__c/fields/RECNOforControlCenter__c.field-meta.xml
<CustomField>
    <fullName>RECNOforControlCenter__c</fullName>
    <label>コントロールセンタRECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>