force-app/main/default/objects/PricingTable__c/fields/RECNOforControlCenter_Attachment__c.field-meta.xml
<CustomField>
    <fullName>RECNOforControlCenter_Attachment__c</fullName>
    <label>コントロールセンタB画面用RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>