force-app/main/default/objects/PricingTable__c/fields/RECNOforEquipmentTransformer__c.field-meta.xml
<CustomField>
    <fullName>RECNOforEquipmentTransformer__c</fullName>
    <label>機器事業部 変圧器RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>