force-app/main/default/objects/PricingTable__c/fields/RECNOforFieldBoard__c.field-meta.xml
<CustomField>
    <fullName>RECNOforFieldBoard__c</fullName>
    <label>現場盤RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>