force-app/main/default/objects/PricingTable__c/fields/RECNOforHighCombi__c.field-meta.xml
<CustomField>
    <fullName>RECNOforHighCombi__c</fullName>
    <label>高圧コンビRECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>