force-app/main/default/objects/PricingTable__c/fields/RECNOforHighVoltage__c.field-meta.xml
<CustomField>
    <fullName>RECNOforHighVoltage__c</fullName>
    <label>高圧受配電盤RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>