force-app/main/default/objects/PricingTable__c/fields/RECNOforLowVoltage__c.field-meta.xml
<CustomField>
    <fullName>RECNOforLowVoltage__c</fullName>
    <label>低圧盤RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>