force-app/main/default/objects/PricingTable__c/fields/RECNOforLowVoltageB_Attachment__c.field-meta.xml
<CustomField>
    <fullName>RECNOforLowVoltageB_Attachment__c</fullName>
    <label>低圧盤B画面取付器具類用RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>