force-app/main/default/objects/PricingTable__c/fields/RECNOforLowVoltageB_Order__c.field-meta.xml
<CustomField>
    <fullName>RECNOforLowVoltageB_Order__c</fullName>
    <label>低圧盤B画面指示計類用RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>