force-app/main/default/objects/PricingTable__c/fields/RECNOforLowVoltageB_Protection__c.field-meta.xml
<CustomField>
    <fullName>RECNOforLowVoltageB_Protection__c</fullName>
    <label>低圧盤B画面保護継電器類用RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>