force-app/main/default/objects/PricingTable__c/fields/RECNOforRelayBoard__c.field-meta.xml
<CustomField>
    <fullName>RECNOforRelayBoard__c</fullName>
    <label>リレー盤RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>