force-app/main/default/objects/PricingTable__c/fields/RECNOforRelayGroundingTerminal__c.field-meta.xml
<CustomField>
    <fullName>RECNOforRelayGroundingTerminal__c</fullName>
    <label>中継端子・接地端子盤RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>