force-app/main/default/objects/PricingTable__c/fields/RECNOforTransformerHighVoltage__c.field-meta.xml
<CustomField>
    <fullName>RECNOforTransformerHighVoltage__c</fullName>
    <label>高圧変圧器RECNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>