force-app/main/default/objects/PricingTable__c/fields/SpecialCalculationPattern__c.field-meta.xml
<CustomField>
    <fullName>SpecialCalculationPattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>特殊計算パターン</label>
    <referenceTo>SpecialCalculationPattern__c</referenceTo>
    <relationshipLabel>価格表</relationshipLabel>
    <relationshipName>PriceBooks</relationshipName>
    <type>Lookup</type>
</CustomField>