force-app/main/default/objects/PricingTable__c/fields/SpecialSpecification__c.field-meta.xml
<CustomField>
    <fullName>SpecialSpecification__c</fullName>
    <label>特殊仕様</label>
    <length>50</length>
    <type>Text</type>
</CustomField>