force-app/main/default/objects/PricingTable__c/fields/SpecialSpecificationFormula__c.field-meta.xml
<CustomField>
    <fullName>SpecialSpecificationFormula__c</fullName>
    <label>特殊仕様 計算式</label>
    <length>20</length>
    <type>Text</type>
</CustomField>