force-app/main/default/objects/PricingTable__c/fields/Specification7DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>Specification7DisplayOrder__c</fullName>
    <label>名称7表示順</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>