force-app/main/default/objects/PricingTable__c/fields/SymbolAndNumber__c.field-meta.xml
<CustomField>
    <fullName>SymbolAndNumber__c</fullName>
    <formula>IF ( AND( ISBLANK(CharacterSymbol__c) , ISBLANK(EquipmentNumber__c) ) ,
 &apos;&apos;,
 CharacterSymbol__c +&apos;@&apos;+ EquipmentNumber__c
)</formula>
    <label>文字記号_器具番号</label>
    <type>Text</type>
</CustomField>