force-app/main/default/objects/PricingTable__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <formula>RecordTypeName__c 
&amp; TEXT(BU__c)
&amp; MajorClassificationName__c
&amp; MinorClassificationName__c
&amp; CategoryName__c
&amp; Name1__c 
&amp; Name2__c 
&amp; Name3__c 
&amp; Name4__c 
&amp; Name5__c
&amp; Name6__c
&amp; Name7__c
&amp; Name8__c
&amp; Name9__c
&amp; Name10__c</formula>
    <label>ユニークキー</label>
    <type>Text</type>
</CustomField>