force-app/main/default/objects/PricingTable__c/fields/UseClassification__c.field-meta.xml
<CustomField>
    <fullName>UseClassification__c</fullName>
    <label>利用分類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高圧受配電盤</fullName>
            </value>
            <value>
                <fullName>高圧変圧器</fullName>
            </value>
            <value>
                <fullName>機器事業部 変圧器</fullName>
            </value>
            <value>
                <fullName>高圧コンビ</fullName>
            </value>
            <value>
                <fullName>低圧盤</fullName>
            </value>
            <value>
                <fullName>現場盤</fullName>
            </value>
            <value>
                <fullName>リレー盤</fullName>
            </value>
            <value>
                <fullName>ACB盤</fullName>
            </value>
            <value>
                <fullName>コントロールセンタ(C/C)</fullName>
            </value>
            <value>
                <fullName>中継端子・接地端子盤</fullName>
            </value>
            <value>
                <fullName>*</fullName>
                <isActive>false</isActive>
                <label>*</label>
            </value>
            <value>
                <fullName>コントロールセンター</fullName>
                <isActive>false</isActive>
                <label>コントロールセンター</label>
            </value>
            <value>
                <fullName>コントロールセンター(C/C)</fullName>
                <isActive>false</isActive>
                <label>コントロールセンター(C/C)</label>
            </value>
            <value>
                <fullName>中継端子盤・端子盤</fullName>
                <isActive>false</isActive>
                <label>中継端子盤・端子盤</label>
            </value>
            <value>
                <fullName>機器事業部 変圧器低圧盤</fullName>
                <isActive>false</isActive>
                <label>機器事業部 変圧器低圧盤</label>
            </value>
            <value>
                <fullName>高低圧変圧器</fullName>
                <isActive>false</isActive>
                <label>高低圧変圧器</label>
            </value>
            <value>
                <fullName>高圧・低圧コンビ</fullName>
                <isActive>false</isActive>
                <label>高圧・低圧コンビ</label>
            </value>
            <value>
                <fullName>高圧受配電盤．高圧コンビ</fullName>
                <isActive>false</isActive>
                <label>高圧受配電盤．高圧コンビ</label>
            </value>
            <value>
                <fullName>高高圧コンビ</fullName>
                <isActive>false</isActive>
                <label>高高圧コンビ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>