force-app/main/default/objects/PricingTable__c/fields/WC__c.field-meta.xml
<CustomField>
    <fullName>WC__c</fullName>
    <label>WC単価</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>