force-app/main/default/objects/PricingTable__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>単位重量</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>