force-app/main/default/objects/PricingTable__c/recordTypes/Chassis.recordType-meta.xml
<RecordType>
    <fullName>Chassis</fullName>
    <active>true</active>
    <label>筐体</label>
</RecordType>