force-app/main/default/objects/PricingTable__c/recordTypes/Detail.recordType-meta.xml
<RecordType>
    <fullName>Detail</fullName>
    <active>true</active>
    <label>明細</label>
</RecordType>