force-app/main/default/objects/PricingTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECNo__c</columns>
    <columns>MasterCode__c</columns>
    <columns>Name1__c</columns>
    <columns>BU__c</columns>
    <columns>MajorClassificationCode__c</columns>
    <columns>MinorClassificationCode__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>