force-app/main/default/objects/PricingTable__c/listViews/FacilityDetails.listView-meta.xml
<ListView>
    <fullName>FacilityDetails</fullName>
    <columns>NAME</columns>
    <columns>RECNo__c</columns>
    <columns>MasterCode__c</columns>
    <columns>Name1__c</columns>
    <columns>BU__c</columns>
    <columns>MajorClassificationCode__c</columns>
    <columns>MinorClassificationCode__c</columns>
    <columns>Price__c</columns>
    <columns>WC__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>MinorClassificationName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PricingTable__c.Detail</value>
    </filters>
    <filters>
        <field>BU__c</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>MajorClassificationName__c</field>
        <operation>equals</operation>
        <value>コントロールセンタ(C/C)</value>
    </filters>
    <label>施設-明細</label>
</ListView>