force-app/main/default/objects/PricingTable__c/listViews/WaterChassis.listView-meta.xml
<ListView>
    <fullName>WaterChassis</fullName>
    <columns>NAME</columns>
    <columns>RECNo__c</columns>
    <columns>MasterCode__c</columns>
    <columns>Name1__c</columns>
    <columns>BU__c</columns>
    <columns>MajorClassificationCode__c</columns>
    <columns>MinorClassificationCode__c</columns>
    <columns>Price__c</columns>
    <columns>WC__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>MinorClassificationName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PricingTable__c.Chassis</value>
    </filters>
    <filters>
        <field>BU__c</field>
        <operation>equals</operation>
        <value>M</value>
    </filters>
    <filters>
        <field>MajorClassificationName__c</field>
        <operation>equals</operation>
        <value>特高</value>
    </filters>
    <filters>
        <field>MinorClassificationName__c</field>
        <operation>equals</operation>
        <value>66kV C-GIS</value>
    </filters>
    <label>水環境-筐体</label>
</ListView>